syntax = "proto3";

option go_package = "github.com/dominichamon/sprinkle/api/sprinkle";

package sprinkle;

message StatusRequest {}

message StatusResponse {
  string ip = 1;
  string hostname = 2;
  uint64 total_ram = 3;
  uint64 free_ram = 4;
  double load = 5;
}

message RunRequest {
  // TODO: fetch
  string cmd = 1;
  uint64 ram = 2;
}

message RunResponse { int64 job_id = 1; }

message JobRequest { int64 id = 1; }

message JobResponse {
  enum State {
    STATE_UNKNOWN = 0;
    STATE_PENDING = 1;
    STATE_RUNNING = 3;
    STATE_COMPLETE = 4;
  }

  int64 start_time = 1;
  int64 end_time = 5;
  State state = 6;
  bool success = 3;
  RUsage rusage = 4;

  reserved 2; // bool exited = 2
}

message JobsRequest {}

message JobsResponse { repeated int64 id = 1; }

message Timeval {
  int64 sec = 1;
  int64 usec = 2;
}

message RUsage {
  Timeval utime = 1;
  Timeval stime = 2;
  int64 maxrss = 3;
}

enum LogType {
  BOTH = 0;
  STDOUT = 1;
  STDERR = 2;
}

message LogsRequest {
  int64 job_id = 1;
  LogType type = 2;
}

message LogsResponse {
  LogType type = 1;
  string chunk = 2;
}

service Worker {
  // Get the status of the worker
  rpc Status(StatusRequest) returns (StatusResponse) {}

  // Run a job on the worker
  rpc Run(RunRequest) returns (RunResponse) {}

  // Get information about a running job on the worker
  rpc Job(JobRequest) returns (JobResponse) {}

  // Get a list of running jobs on the worker
  rpc Jobs(JobsRequest) returns (JobsResponse) {}

  // Get the logs for a given job on the worker
  rpc Logs(LogsRequest) returns (stream LogsResponse) {}
}
